# Ocypus-Nexus

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  VISION.md
.github/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml  release.yml
backend/: pyproject.toml
deploy/: docker-compose.yml
docs/api/: 06_OpenAPI_Architecture.md
docs/architecture/: 11_Asset_Storage_Design.md  12_Website_CMS_Architecture.md  13_AI_Service_Architecture.md
docs/database/: 00_Database_Overview.md  01_ER_Diagram.md  02_Table_Definitions.md  03_Index_Strategy.md  04_Migration_Strategy.md  05_Data_Dictionary.md  06_Naming_Convention.md  07_RBAC_Data_Model.md  08_Audit_Log_Model.md  09_Excel_Template_Model.md  10_Metadata_EAV_Model.md  sqlite.sql
docs/deployment/: 01_Deployment_Architecture.md
docs/docs/devops/: 01_CICD_Architecture.md
docs/specifications/: 00_Metadata_Model.md  01_Product_Category_Model.md  02_Product_Attribute_Model.md  03_Attribute_Group_Model.md  04_Validation_Rules.md  05_Unit_System.md
docs/testing/: 01_Testing_Strategy.md
frontend/: package.json
