[project]
name = "ocypus-nexus"

version = "1.0.0"

requires-python = ">=3.12"

dependencies = [

    "fastapi",

    "uvicorn",

    "sqlalchemy",

    "alembic",

    "pydantic",

    "pydantic-settings",

    "psycopg",

    "redis",

    "minio",

    "httpx",

    "python-jose",

    "passlib",

    "python-multipart",

    "orjson",

    "openpyxl",

    "Pillow"

]
